--- a/packages/@stimulus/lib/package.json
+++ b/packages/@stimulus/lib/package.json
@@ -15,6 +15,14 @@
     "dist/index*",
     "dist/src"
   ],
+  "dependencies": {
+    "@stimulus/core": "^1.1.0"
+  },
+  "devDependencies": {
+    "rollup": "^0.65.0",
+    "rollup-plugin-dev-server": "^0.4.3",
+    "rollup-plugin-node-resolve": "^3.3.0"
+  },
   "publishConfig": {
     "access": "public"
   },
@@ -22,6 +30,7 @@
     "clean": "rimraf dist",
     "lint": "tslint -p . -c ../../../config/tslint.json",
     "build": "tsc",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "start": "rollup -wc"
   }
 }
