--- a/packages/@stimulus/http/package.json
+++ b/packages/@stimulus/http/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@stimulus/lib",
+  "name": "@stimulus/http",
   "version": "1.1.0",
-  "description": "Stimulus JavaScript framework: Standard library",
+  "description": "Stimulus JavaScript framework: HTTP client",
   "repository": "https://github.com/stimulusjs/stimulus",
   "author": "Basecamp, LLC",
   "contributors": [
@@ -15,15 +15,6 @@
     "dist/index*",
     "dist/src"
   ],
-  "dependencies": {
-    "@stimulus/core": "^1.1.0",
-    "@stimulus/http": "^1.1.0"
-  },
-  "devDependencies": {
-    "rollup": "^0.65.0",
-    "rollup-plugin-dev-server": "^0.4.3",
-    "rollup-plugin-node-resolve": "^3.3.0"
-  },
   "publishConfig": {
     "access": "public"
   },
