--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
   "dependencies": {
     "@types/qunit": "^2.5.2",
     "@types/webpack-env": "^1.13.3",
+    "express": "^4.16.3",
+    "express-middleware-rollup": "^2.0.0",
     "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-qunit": "^2.1.0",
     "karma-sauce-launcher": "^1.2.0",
     "karma-webpack": "^3.0.0",
     "lerna": "^3.0.0-rc.0",
+    "multer": "^1.3.1",
     "qunit": "^2.6.2",
     "rimraf": "^2.6.2",
     "ts-loader": "^4.5.0",
