--- a/packages/@stimulus/ajax/package.json
+++ b/packages/@stimulus/ajax/package.json
@@ -20,8 +20,10 @@
     "@stimulus/http": "^1.1.0"
   },
   "devDependencies": {
+    "express": "^4.16.3",
+    "express-middleware-rollup": "^2.0.0",
+    "multer": "^1.3.1",
     "rollup": "^0.65.0",
-    "rollup-plugin-dev-server": "^0.4.3",
     "rollup-plugin-node-resolve": "^3.3.0"
   },
   "publishConfig": {
@@ -32,6 +34,6 @@
     "lint": "tslint -p . -c ../../../config/tslint.json",
     "build": "{ [ ! -r dist ] || { find src -newer dist | grep .; }>/dev/null; } && { tsc && touch dist; } || true",
     "watch": "tsc --watch",
-    "start": "rollup -wc"
+    "start": "rollup -c --experimentalCodeSplitting && node server.js"
   }
 }
