--- a/packages/@stimulus/ajax/package.json
+++ b/packages/@stimulus/ajax/package.json
@@ -17,14 +17,17 @@
   ],
   "dependencies": {
     "@stimulus/core": "^1.1.0",
-    "@stimulus/http": "^1.1.0"
+    "@stimulus/http": "^1.1.0",
+    "@types/incremental-dom": "^0.5.0",
+    "incremental-dom": "^0.5.1"
   },
   "devDependencies": {
     "express": "^4.16.3",
-    "express-middleware-rollup": "^2.0.0",
     "multer": "^1.3.1",
     "rollup": "^0.65.0",
-    "rollup-plugin-node-resolve": "^3.3.0"
+    "rollup-plugin-commonjs": "^9.1.6",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-replace": "^2.0.0"
   },
   "publishConfig": {
     "access": "public"
